--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  overflow: hidden;
+  background-color: #ffffff;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-width: 100vw;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.emoji-logo {
+  display: block;
+  margin-top: 6vh;
+  font-size: 10vh;
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.to-code {
+  background-color: inherit;
+}
+
+button:hover {
+  transform: translateY(-3px);
+}
+
+h1 {
+  font-family: "Raleway";
+  font-weight: 600;
+  font-size: 5vh;
+  color: #1a1a1a;
+  margin-bottom: -1vh;
+}
+
+h2 {
+  font-family: "Raleway";
+  font-weight: 400;
+  font-size: 2.5vh;
+  color: #4d575c;
 }
