--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ h1 {
   font-family: "Raleway";
   font-weight: 600;
   font-size: 5vh;
-  color: #1a1a1a;
+  color: #2e2e2e;
   margin-bottom: -1vh;
 }
 
