--- a/src/App.css
+++ b/src/App.css
@@ -116,12 +116,27 @@ h2 {
   color: #ffffff;
 }
 
+.btn-nav {
+  margin: 4vh;
+  padding: 15px 40px 15px 40px;
+  background-color: #ffffff;
+  font-size: 2.5vh;
+  font-weight: 400;
+  font-family: "Raleway";
+  border-radius: 5px;
+  color: #4d575c;
+}
+
 .btn-info:hover {
   background-color: #60bae7;
 }
 
 .btn-chart:hover {
   background-color: #ff7a7e;
+}
+
+.btn-nav:hover {
+  background-color: #eeeeee;
 }
 
 .graph-wrapper {
